Archive2/3d/73a5e3ae64bb3e/main.cpp
#include <functional>
#include <string>
#include <vector>
#include <iostream>
#include <regex>

class foo
{
};

int main()
{
    auto f = foo const*{nullptr};
}
